--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.22.0
+  google_fonts: ^6.1.0
+  flutter_svg: ^2.0.9
+  rive: ^0.12.3
+  firebase_auth: ^4.13.0
+  google_sign_in: ^6.1.6
+  google_sign_in_ios: ^5.6.5
 
 dev_dependencies:
   flutter_test:
@@ -53,16 +58,16 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/Backgrounds/
+    - assets/icons/
+    - assets/RiveAssets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
