--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,8 @@ dependencies:
   firebase_core: ^2.22.0
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
-  rive: ^0.12.3
   firebase_auth: ^4.13.0
   google_sign_in: ^6.1.6
-  google_sign_in_ios: ^5.6.5
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +64,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
