Flexible device size and features

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_svg: ^2.0.9
   firebase_auth: ^4.13.0
   google_sign_in: ^6.1.6
+  intl: ^0.18.1
+  cloud_firestore: ^4.13.1
 
 dev_dependencies:
   flutter_test:
