--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: ^6.1.6
   intl: ^0.18.1
   cloud_firestore: ^4.13.1
+  uuid: ^4.2.1
 
 dev_dependencies:
   flutter_test:
