--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.18.1
   cloud_firestore: ^4.13.1
   uuid: ^4.2.1
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
