--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^4.13.1
   uuid: ^4.2.1
   share_plus: ^7.2.1
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
