--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   uuid: ^4.2.1
   share_plus: ^7.2.1
   qr_flutter: ^4.1.0
+  time_picker_spinner: ^0.0.1
 
 dev_dependencies:
   flutter_test:
