--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   qr_flutter: ^4.1.0
   time_picker_spinner: ^0.0.1
   simple_barcode_scanner: ^0.0.8
+  mat_month_picker_dialog: ^1.1.1
 
 dev_dependencies:
   flutter_test:
