--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   time_picker_spinner: ^0.0.1
   simple_barcode_scanner: ^0.0.8
   mat_month_picker_dialog: ^1.1.1
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
