--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   simple_barcode_scanner: ^0.0.8
   mat_month_picker_dialog: ^1.1.1
   curved_navigation_bar: ^1.0.3
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
