--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   mat_month_picker_dialog: ^1.1.1
   curved_navigation_bar: ^1.0.3
   flutter_bloc: ^8.1.3
+  flutter_slidable: ^3.0.1
 
 dev_dependencies:
   flutter_test:
